--- a/create-pattern/factory-kit/pom.xml
+++ b/create-pattern/factory-kit/pom.xml
@@ -3,22 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>design-pattern</artifactId>
+        <artifactId>create-pattern</artifactId>
         <groupId>com.bupt.dc</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>create-pattern</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>abstract-factory</module>
-        <module>builder</module>
-        <module>factory-kit</module>
-        <module>factory-method</module>
-        <module>mono-state</module>
-        <module>multiton</module>
-    </modules>
+    <artifactId>factory-kit</artifactId>
 
 
 </project>
